right box_alignment issue

--- a/vtr-ui/src/app/components/widgets/widget-system-monitor/widget-system-monitor.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-system-monitor/widget-system-monitor.component.scss
@@ -35,7 +35,7 @@
 				@media #{$breakpoint_md} {
 					padding: 2rem 0;
 				}
-				@media only screen and (min-width: 991px) and (max-width: 992px){
+				@media only screen and (min-width: 991.99px) and (max-width: 992px){
 					padding-left:2rem!important;
 				}
 				@media only screen and (min-width: 572px) and (max-width: 767.9px){
